<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="in.driverlo.www.driverlo_customer.Terms">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
           style="@style/vertical_LL">
            <LinearLayout
                style="@style/horizontal_LL.open">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet_symbol"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textSize="@dimen/semi_medium_text_size"
                    android:text="@string/terms1"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <LinearLayout
                style="@style/horizontal_LL.open">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet_symbol"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textSize="@dimen/semi_medium_text_size"
                    android:text="@string/terms2"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <LinearLayout
                style="@style/horizontal_LL.open">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet_symbol"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textSize="@dimen/semi_medium_text_size"
                    android:text="@string/terms3"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <LinearLayout
                style="@style/horizontal_LL.open">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet_symbol"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textSize="@dimen/semi_medium_text_size"
                    android:text="@string/terms4"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <LinearLayout
                style="@style/horizontal_LL.open">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet_symbol"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textSize="@dimen/semi_medium_text_size"
                    android:text="@string/terms5"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <LinearLayout
                style="@style/horizontal_LL.open">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet_symbol"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textSize="@dimen/semi_medium_text_size"
                    android:text="@string/terms6"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <LinearLayout
                style="@style/horizontal_LL.open">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet_symbol"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textSize="@dimen/semi_medium_text_size"
                    android:text="@string/terms7"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <LinearLayout
                style="@style/horizontal_LL.open">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet_symbol"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textSize="@dimen/semi_medium_text_size"
                    android:text="@string/terms8"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <LinearLayout
                style="@style/horizontal_LL.open">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet_symbol"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textSize="@dimen/semi_medium_text_size"
                    android:text="@string/terms9"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <LinearLayout
                style="@style/horizontal_LL.open">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet_symbol"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textSize="@dimen/semi_medium_text_size"
                    android:text="@string/terms10"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <LinearLayout
                style="@style/horizontal_LL.open">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet_symbol"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textSize="@dimen/semi_medium_text_size"
                    android:text="@string/terms11"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <LinearLayout
                style="@style/horizontal_LL.open">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet_symbol"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textSize="@dimen/semi_medium_text_size"
                    android:text="@string/terms12"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <LinearLayout
                style="@style/horizontal_LL.open">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet_symbol"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textSize="@dimen/semi_medium_text_size"
                    android:text="@string/terms13"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <LinearLayout
                style="@style/horizontal_LL.open">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet_symbol"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textSize="@dimen/semi_medium_text_size"
                    android:text="@string/terms14"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <LinearLayout
                style="@style/horizontal_LL.open">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet_symbol"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textSize="@dimen/semi_medium_text_size"
                    android:text="@string/terms16"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <LinearLayout
                style="@style/horizontal_LL.open">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bullet_symbol"
                    android:paddingLeft="5dp"
                    android:paddingRight="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="2dp"
                    android:textSize="@dimen/semi_medium_text_size"
                    android:text="@string/terms17"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>
