<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    style="@style/outer_layout"
    tools:context="in.driverlo.www.driverlo_customer.Activities.MainActivity">

    <LinearLayout
        style="@style/horizontal_LL.sm.1">
    </LinearLayout>

    <LinearLayout
        style="@style/horizontal_LL.sm.3">

        <LinearLayout
            style="@style/vertical_LL">

            <LinearLayout
                style="@style/horizontal_LL.sm.4">

                    <LinearLayout
                        style="@style/form_container">

                        <LinearLayout
                            style="@style/horizontal_LL.sm.1">

                                <android.support.design.widget.TextInputLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content">

                                    <EditText
                                        android:layout_height="match_parent"
                                        android:layout_width="match_parent"
                                        android:hint="@string/hint_mobile_no"
                                        android:id="@+id/login_mobile_no"
                                        android:inputType="phone"
                                        android:drawableLeft="@drawable/cd_icon_mobile"
                                        />

                                </android.support.design.widget.TextInputLayout>

                            </LinearLayout>

                        <LinearLayout
                            style="@style/horizontal_LL.sm.1">

                                <android.support.design.widget.TextInputLayout
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="5"
                                    android:orientation="vertical">

                                    <EditText
                                       android:layout_height="match_parent"
                                        android:layout_width="match_parent"
                                        android:hint="@string/hint_password"
                                        android:id="@+id/login_password"
                                        android:inputType="textPassword"
                                        android:drawableLeft="@drawable/cd_icon_password"
                                        />

                                </android.support.design.widget.TextInputLayout>

                                <TextView
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:orientation="vertical"
                                    android:textSize="15sp"
                                    android:text="@string/show"
                                    android:id="@+id/hide_show"
                                    android:gravity="center"
                                    />

                        </LinearLayout>

                    </LinearLayout>

            </LinearLayout>

            <LinearLayout

                style="@style/horizontal_LL.sm.1"
                android:gravity="center">

                <Button
                    style="@style/full_screen_button"
                    android:id="@+id/login_submit_button"
                    android:text="@string/button_text_login"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        style="@style/horizontal_LL.sm.1">

        <TextView
            style="@style/vertical_LL.sm.1"
            android:textAlignment="viewStart"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:id="@+id/forgot_password"/>

        <TextView
            style="@style/vertical_LL.sm.1"
            android:textAlignment="viewEnd"
            android:textSize="15sp"
            android:gravity="center"
            android:text="@string/new_user"
            android:id="@+id/new_user"/>

    </LinearLayout>

</LinearLayout>
